Revert "[SDEV3-2329] fix: table cell alignment"

--- a/packages/heartwood-components/components/03-structure/table.scss
+++ b/packages/heartwood-components/components/03-structure/table.scss
@@ -101,7 +101,6 @@ $expandDuration: 0.2s;
 .table-cell,
 .table-header-cell {
 	display: flex;
-	align-items: center;
 	width: 100%;
 
 	&:first-child {
